src/objects/TPO_Location__c.object
<CustomObject>
    <fields>
        <fullName>Capabiliities_TF__c</fullName>
        <description>Technical field which is populated via Workflow to capture Capabilities Picklist values. This field is used in the lookup search.</description>
        <label>Capabilities_TF</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capabiliities__c</fullName>
        <label>Capabilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chart Reviews</fullName>
                </value>
                <value>
                    <fullName>Compound/Submission Documents</fullName>
                </value>
                <value>
                    <fullName>Computer_Systems</fullName>
                </value>
                <value>
                    <fullName>Database Study</fullName>
                </value>
                <value>
                    <fullName>Data Extractions</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Literature Reviews</fullName>
                </value>
                <value>
                    <fullName>Meta-Analysis</fullName>
                </value>
                <value>
                    <fullName>Modeling</fullName>
                </value>
                <value>
                    <fullName>Observational Studies- Site Based</fullName>
                </value>
                <value>
                    <fullName>Patient Reported Outcomes Development</fullName>
                </value>
                <value>
                    <fullName>Payer Engagement</fullName>
                </value>
                <value>
                    <fullName>Physician Engagement</fullName>
                </value>
                <value>
                    <fullName>Pragmatic Trials</fullName>
                </value>
                <value>
                    <fullName>Publication Deliverables</fullName>
                </value>
                <value>
                    <fullName>Qualitative Research</fullName>
                </value>
                <value>
                    <fullName>Statistics</fullName>
                </value>
                <value>
                    <fullName>Study Documents</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Utility Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>TPO_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Parent_TPO__c</fullName>
        <label>Link to Parent TPO</label>
        <referenceTo>TPO__c</referenceTo>
        <relationshipName>TPO_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Did not take forward for approval</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPO_Classification__c</fullName>
        <inlineHelpText>Approved to conduct both regulated work and non-regulated work or only non-regulated work</inlineHelpText>
        <label>TPO Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regulated vendor</fullName>
                </value>
                <value>
                    <fullName>Non-Regulated vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPO_Contact_Phone_Number__c</fullName>
        <label>TPO Location Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPO_Contact__c</fullName>
        <label>TPO Location Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPO_Email__c</fullName>
        <label>TPO Location Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TPO_ID__c</fullName>
        <label>TPO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPO_Record_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPO Record Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_TPO_Locations_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TPO Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Capabiliities__c</columns>
        <columns>TPO_Classification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Review_TPO_Locations</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>TPO_Contact__c</columns>
        <columns>TPO_Email__c</columns>
        <columns>TPO_Contact_Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessOrEqual</operation>
            <value>8/14/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>notContain</operation>
            <value>Rebecca</value>
        </filters>
        <label>Review TPO Locations</label>
        <language>en_US</language>
        <sharedTo>
            <group>RWE_Inc_Member</group>
            <group>RWE_Internal_Partners</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>TPO Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPO Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>